# Desire-Cloud-Computing

./: .gitignore  CMakeLists.txt  README.md  dmake.sh  make.sh
backend/: BACKEND-README.md  Makefile  backend-defs.hpp  cloud-compile-backend.hpp  compile-thread.cpp  global-constant.cpp  main.cpp  tackle-client.cpp  write-log.cpp
backend/network/: class.Accepter.cpp  class.Buffer.cpp  class.Channel.cpp  class.EventLoop.cpp  class.TcpConnection.cpp  class.TcpServer.cpp  network.hpp
frontend/: CMakeLists.txt  FRONTEND-README.md  MainWindow.cpp  Makefile  cloud-compile-frontend.hpp  frontend-defs.hpp  global-constant.cpp  main.cpp  write-log.cpp
frontend/graphic-interface/: MainWindow.cpp  base.ActionTask.hpp  class.MainWindow.cpp  class.SendFileTask.cpp  class.TaskManager.cpp  graphic-interface.hpp
frontend/network/: class.ClientSocket.cpp  class.ConnectionManager.cpp  class.MessageHandler.cpp  class.Receiver.cpp  class.Sender.cpp  network.hpp
